# tebot

./: .gitignore  Cargo.toml  README.md  build.rs  database.db  rustfmt.toml
data/sigthief/: kernel32.sig
src/: command.rs  config.rs  context.rs  dispatcher.rs  env.rs  error.rs  formatter.rs  handler.rs  main.rs  parsers.rs  permissions.rs  plugin.rs  style.rs
src/bot/: command.rs  config.rs  context.rs  dispatcher.rs  mod.rs  plugin.rs
src/permissions/: manager.rs  types.rs
src/plugins/: access.rs  core.rs  mod.rs  sigthief.rs  storage.rs  system.rs  time.rs
src/utils/: dirs.rs  env.rs  etc.rs  formatter.rs  metadata.rs  mod.rs  parsers.rs  storage.rs  style.rs
