[package]
name = "tebot"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { version = "2.9.4", features = ["serde"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] } 
serde_json = "1.0.145"
teloxide = "0.17.0"
