[package]
name = "tebot"
version = "0.1.4"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bitflags = { version = "2.9.4", features = ["serde"] }
derivative = "2.2.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
indexmap = "2.11.4"
log = "0.4.28"
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] } 
serde_json = "1.0.145"
teloxide = "0.17.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"]}
